// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBottom renders 0 1`] = `
Array [
  .c0 {
  border-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders function 1`] = `
Array [
  .c0 {
  border-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders invalid theme path 1`] = `
Array [
  .c0 {
  border-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders negative number 1`] = `
Array [
  .c0 {
  border-bottom: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-bottom: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-bottom: July;
  }
}

@media April {
  .c0 {
    border-bottom: August;
  }
}

@media January {
  .c0 {
    border-bottom: September;
  }
}

@media April {
  .c0 {
    border-bottom: November;
  }
}

@media June {
  .c0 {
    border-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-bottom: July;
  }
}

@media April {
  .c0 {
    border-bottom: August;
  }
}

@media January {
  .c0 {
    border-bottom: September;
  }
}

@media April {
  .c0 {
    border-bottom: November;
  }
}

@media June {
  .c0 {
    border-bottom: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom: January;
  }
}

@media April {
  .c0 {
    border-bottom: December;
  }
}

@media January {
  .c0 {
    border-bottom: April;
  }
}

@media April {
  .c0 {
    border-bottom: May;
  }
}

@media June {
  .c0 {
    border-bottom: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom: January;
  }
}

@media April {
  .c0 {
    border-bottom: December;
  }
}

@media January {
  .c0 {
    border-bottom: April;
  }
}

@media April {
  .c0 {
    border-bottom: May;
  }
}

@media June {
  .c0 {
    border-bottom: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders postitive number 1`] = `
Array [
  .c0 {
  border-bottom: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders string 1`] = `
Array [
  .c0 {
  border-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottom renders valid theme path 1`] = `
Array [
  .c0 {
  border-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
